--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -12,6 +12,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/articles">Blogs</a>
+          </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
             Dropdown
