--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -14,7 +14,23 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/articles">Blogs</a>
+        </li>
+        <!-- Hiding register and login links when user is logged in-->
+        {% if session.logged_in %}
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard">Dashboard</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Logout</a>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="/register">Sign Up</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Login</a>
+          </li>
+        {% endif %}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
             Dropdown
